force-app/main/default/objects/sc_ext__Alert_Subscriber__c/sc_ext__Alert_Subscriber__c.object-meta.xml
<CustomObject>
    <label>Own Alert Subscriber</label>
    <nameField>
        <displayFormat>ASub-{00000000}</displayFormat>
        <label>Own Alert Subscriber Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Own Alert Subscribers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>