force-app/main/default/objects/sc_ext__Alert_Subscriber__c/fields/sc_ext__Email__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>