force-app/main/default/objects/sc_ext__Alert_Subscriber__c/fields/sc_ext__Notify_In_App__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Notify_In_App__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify In-App</label>
    <type>Checkbox</type>
</CustomField>