force-app/main/default/objects/sc_ext__Alert_Subscriber__c/fields/sc_ext__Notify_via_Email__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Notify_via_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify via Email</label>
    <type>Checkbox</type>
</CustomField>