force-app/main/default/objects/sc_ext__Alert_Subscriber__c/fields/sc_ext__User__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RevCult_Alert_Subscribers</relationshipName>
    <type>Lookup</type>
</CustomField>